--- a/app/styling/runningtruck.module.css
+++ b/app/styling/runningtruck.module.css
@@ -2,9 +2,8 @@
 .runningtruck { 
     margin-top: 5rem;
     font-size: 5rem;
-    animation: turn 2s, bounce 10s infinite alternate-reverse;
-    animation-fill-mode: forwards; 
-}
+    animation: bounce 10s infinite linear;
+ }
 
 @keyframes bounce {
     0% {
@@ -13,13 +12,4 @@
     100% {
         transform: translateX(100vw) 
     }
-} 
-
-@keyframes turn {
-    0% {
-        transform: scale(1, 1);
-    }
-    100% {
-        transform: scale(-1,-1);
-    }
-}
+}  
